# keystone

./: .gitignore  Cargo.toml  README.md
crates/asset-mapper-cli/: Cargo.toml
crates/asset-mapper-cli/src/: main.rs
crates/asset-mapper-cli/tests/: cli.rs
crates/asset-mapper-core/: Cargo.toml
crates/asset-mapper-core/src/: bundle.rs  diagnostics.rs  hash.rs  lib.rs  resolver.rs  schema.rs  validate.rs
crates/asset-mapper-core/tests/: bundle.rs  hash.rs  resolver.rs  schema_roundtrip.rs  validation.rs
crates/asset-mapper-core/tests/snapshots/: bundle__bundle_omits_raw_connector_transforms.snap
crates/asset-mapper-editor/: index.html  package-lock.json  package.json  vite.config.ts
crates/asset-mapper-editor/scripts/: write-phase2-glb-fixture.mjs
crates/asset-mapper-editor/src/: App.test.tsx  App.tsx  editorState.test.ts  editorState.ts  styles.css  tauriApi.ts  types.ts
crates/asset-mapper-editor/src-tauri/: Cargo.toml  tauri.conf.json
crates/asset-mapper-editor/src-tauri/capabilities/: default.json
crates/asset-mapper-editor/src-tauri/src/: commands.rs  dto.rs  error.rs  lib.rs  main.rs
crates/asset-mapper-editor/src-tauri/tests/: commands.rs  smoke.rs
crates/asset-mapper-editor/src/components/: AssetList.tsx  DiagnosticsPanel.tsx  Inspector.tsx  RulesEditor.tsx  Viewport.tsx
crates/asset-mapper-editor/src/three/: assetUrls.test.ts  assetUrls.ts  createAssetViewer.ts
crates/asset-mapper-io/: Cargo.toml
crates/asset-mapper-io/src/: error.rs  index.rs  lib.rs  sidecar.rs  validation.rs
crates/asset-mapper-io/tests/: index.rs  sidecar.rs  source_validation.rs
docs/superpowers/plans/: 2026-06-15-phase-0-proof-harness.md  2026-06-15-phase-1-core-cli.md  2026-06-16-phase-2-editor-mvp.md
docs/superpowers/specs/: 2026-06-15-asset-pack-semantic-mapper-design.md  2026-06-15-phase-1-core-cli-design.md  2026-06-16-phase-2-editor-mvp-design.md
fixtures/phase0/: invalid_pack_unknown_class.assetmap.json  simple_pack.assetmap.json  simple_plan.json
fixtures/phase2/modular_pack/: wall.glb
