[workspace]
members = [
    "crates/asset-mapper-core",
    "crates/asset-mapper-cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
assert_cmd = "2"
clap = { version = "4", features = ["derive"] }
glam = { version = "0.33", features = ["serde"] }
insta = { version = "1", features = ["json"] }
predicates = "3"
proptest = "1"
schemars = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
tempfile = "3"
thiserror = "2"
