[package]
name = "asset-mapper-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "asset-mapper"
path = "src/main.rs"

[dependencies]
asset-mapper-core = { path = "../asset-mapper-core" }
asset-mapper-io = { path = "../asset-mapper-io" }
clap.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
