[package]
name = "asset-mapper-editor"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "asset_mapper_editor"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
asset-mapper-core = { path = "../../asset-mapper-core" }
asset-mapper-io = { path = "../../asset-mapper-io" }
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
